--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^0.3.53",
     "@langchain/google-genai": "^0.2.16",
+    "@langchain/langgraph": "^0.4.6",
     "@langchain/openai": "^0.6.9",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
